kubernetes/applications/blackbox/blackbox-exporter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  namespace: blackbox
spec:
  type: ClusterIP
  selector:
    app: blackbox-exporter
  ports:
    - name: http
      port: 9115
      targetPort: 9115
