kubernetes/applications/blackbox/blackbox-manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blackbox

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: blackbox
  labels:
    app: blackbox-exporter
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        fsGroup: 65534
      containers:
        - name: blackbox-exporter
          image: quay.io/prometheus/blackbox-exporter:v0.28.0
          imagePullPolicy: IfNotPresent
          args:
            - --config.file=/config/blackbox.yml
          ports:
            - name: http
              containerPort: 9115
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: config-cm
              mountPath: /config
              readOnly: true
      volumes:
        - name: config-cm
          configMap:
            name: blackbox-config

---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  namespace: blackbox
spec:
  type: ClusterIP
  selector:
    app: blackbox-exporter
  ports:
    - name: http
      port: 9115
      targetPort: 9115
